After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 711746 - Fix the arrow icons in gstreamer plugin (in RTL)
Fix the arrow icons in gstreamer plugin (in RTL)
Status: RESOLVED FIXED
Product: gthumb
Classification: Other
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Paolo Bacchilega
Paolo Bacchilega
Depends on:
Blocks:
 
 
Reported: 2013-11-09 21:42 UTC by Yosef Or Boczko
Modified: 2013-11-09 22:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gstreamer: set the button arrow icons according to the locale's text direction (4.28 KB, patch)
2013-11-09 21:42 UTC, Yosef Or Boczko
none Details | Review

Description Yosef Or Boczko 2013-11-09 21:42:19 UTC
See the patch.
Comment 1 Yosef Or Boczko 2013-11-09 21:42:58 UTC
Created attachment 259350 [details] [review]
gstreamer: set the button arrow icons according to the locale's text direction
Comment 2 Paolo Bacchilega 2013-11-09 22:28:49 UTC
Patch applied to master, thank you.